2009-03-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot, src/interp/nruncomp.boot:
	Speed up compilation of EXPEXPAN.spad.

2009-03-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot: compWithMappingMode(): supress
	bogus warnings about parameters having no value.

2009-03-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/compiler.boot, src/interp/define.boot,
	src/interp/newaux.lisp, src/interp/property.lisp:
	Support '+->' and nested functions.

2009-03-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/info.boot, src/interp/category.boot,
	src/interp/wi2.boot, src/interp/functor.boot,
	src/interp/define.boot: Misc cleanups.

2009-03-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/axext_l.lisp, src/interp/category.boot,
	src/interp/database.boot, src/interp/define.boot,
	src/interp/htcheck.boot, src/interp/i-intern.boot,
	src/interp/i-output.boot, src/interp/i-spec2.boot,
	src/interp/i-syscmd.boot, src/interp/lisplib.boot,
	src/interp/macros.lisp, src/interp/package.boot,
	src/interp/setq.lisp, src/interp/setvars.boot,
	src/interp/spad.lisp, src/lisp/fricas-lisp.lisp,
	src/lisp/fricas-package.lisp, src/share/doc/msgs/s2-us.msgs:
	Misc cleanups.

2009-03-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/nrunopt.boot src/interp/property.lisp,
	src/interp/compiler.boot, src/interp/c-util.boot,
	src/interp/setq.lisp, src/interp/define.boot,
	src/interp/hashcode.boot: Misc cleanups.

2009-03-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/input/Makefile.in: Cleanup test Makefile.

2009-03-14  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/category.boot: SigListOpSubsume(): Use EQ
	for faster comparison.

2009-03-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: Parallelize main bootstrap
	stage.
	Makefile.in: force sequential build of noweb.

2009-03-11  Aleksej Saushev  <asau@inbox.ru>

	* configure.ac: Support Dragonfly BSD.
