@@ -1,3 +1,11 @@
+2009-03-24  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/comp.lisp: convert functions to Boot
+	and move to
+	src/interp/g-boot.boot: here.
+	src/interp/i-analy.boot, src/interp/def.lisp,
+	src/interp/compiler.boot: Adjust.
+
 2009-03-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/info.boot, src/interp/nruncomp.boot:
